# CarConnectivity-plugin-webui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup_requirements.txt
.github/workflows/: build.yml  build_and_publish.yml  codeql-analysis.yml
doc/: Config.md
src/carconnectivity_plugins/webui/: plugin.py
src/carconnectivity_plugins/webui/ui/: cache.py  connectors.py  garage.py  plugin_ui.py  plugins.py  webui.py
src/carconnectivity_plugins/webui/ui/static/css/: style.css
src/carconnectivity_plugins/webui/ui/templates/: about.html  base.html  log.html
src/carconnectivity_plugins/webui/ui/templates/connectors/: config.html  log.html  status.html
src/carconnectivity_plugins/webui/ui/templates/garage/: garage.html  vehicle.html
src/carconnectivity_plugins/webui/ui/templates/login/: login.html
src/carconnectivity_plugins/webui/ui/templates/plugins/: config.html  log.html  status.html
test/integration_test/: carConnectivity.json
