[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "carconnectivity-plugin-webui"
description = "CarConnectivity plugin for a web based user interface"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [
    { name = "Till Steinbach" }
]
dependencies = [
    "carconnectivity[images]>=0.3",
    "Werkzeug~=3.1.3",
    "Flask~=3.1.0",
    "flask-login~=0.6.3",
    "flask-caching~=2.3.0",
    "WTForms~=3.2.1",
    "flask_wtf~=1.2.2",
    "pypng~=0.20220715.0",
    "Bootstrap-Flask~=2.4.1"
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: System :: Monitoring",
    "Topic :: Home Automation"
]

[project.optional-dependencies]

[project.urls]

[project.scripts]

[tool.setuptools_scm]
write_to = "src/carconnectivity_plugins/webui/_version.py"

[tool.pylint.format]
max-line-length = 160
ignore-patterns= "_version.py"

[tool.bandit]
targets = "carconnectivity_webui, carconnectivity_plugins"